# ESL_final_project

./: README.md  Report.md
sw/final-sort-1core/: Makefile  bootstrap.S  main  main_printf.c  sorter_def.h
sw/final-sort-2cores/: Makefile  data.txt  data1.txt  main  main_printf.c  main_printf_2c2p.c
sw/final-sort-4pe/: Makefile  bootstrap.S  main  main_printf.c
vp/src/platform/: CMakeLists.txt
vp/src/platform/tiny32-mc-final-1core/: CMakeLists.txt  mc_main.cpp  sorter_def.h
vp/src/platform/tiny32-mc-final-2pe/: CMakeLists.txt  mc_main.cpp
vp/src/platform/tiny32-mc-final-4cores/: CMakeLists.txt  Sorter.h  mc_main.cpp
